--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ span{
     /* background-color: red; */
     margin: 0 auto;
 }
+header{
+    width: 100%;
+}
 .row{
     display: flex;
     justify-content: space-between;
@@ -50,7 +53,11 @@ nav h3{
     text-align: end;
 }
 .nav{
+    display: flex;
+    flex-direction: column;
     margin-top: 1rem;
+    flex-grow: 1;
+    overflow: hidden;
     /* width:65%; */
     /* background-color: tomato; */
 }
@@ -69,7 +76,7 @@ nav h3{
     color: white;
     list-style: none;
     text-transform: uppercase;
-    font-size: .8rem;
+    font-size: .7rem;
 }
 .nav_item a:hover{
     color: var(--color);
@@ -144,6 +151,9 @@ nav h3{
     .container{
         width: 100%;
     }
+    header{
+        width: 100%;
+    }
     .jahirat p{
         font-size: 1rem;
         }
@@ -161,6 +171,13 @@ nav h3{
        } 
        .nav_item{
            margin-top: 1rem;
+       }
+       @media(max-width:475px){
+           .nav_item a{
+               font-size: .5rem;
+               line-height: 2;
+               /* font-weight: 700; */
+           }
        }
         
 }
